--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,11 @@
     from = "/*"
     to = "/index.html"
     status = 200
+[[redirects]]
+    force: true
+    from = "/image/*"
+    to = "/image/:id"
+    status = 200
 [build]
   command = "CI=false npm run build"
   functions = "netlify/functions"
